# dedecology

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  deps.py  main.py  redis_client.py  reprocess.py  seed.py  worker.py
backend/tests/: conftest.py  test_addr_norm.py  test_auth.py  test_blocked_domains.py  test_deps.py  test_error_reports.py  test_export.py  test_geo.py  test_incident_subtypes.py  test_incident_types.py  test_incidents.py  test_intake.py  test_integration.py  test_migrations.py  test_mno.py  test_quotes.py  test_regions.py  test_reports.py  test_seed.py  test_smtp.py  test_users.py  test_utko_export.py  test_volunteers.py
contracts/: .gitkeep  openapi.json
docs/: API-мобильный.md  BUILD-SPEC.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
maxbot/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
maxbot/maxbot/: __init__.py  bot.py  config.py  errors.py  intake_client.py  main.py  maxapi_compat.py  notify.py  session.py
maxbot/tests/: test_session.py
project/: .thumbnail  ДедЭколог (standalone).html  ДедЭколог.dc.html
project/docs/: Claude Code - выжимка.md  Журнал работ.md  ТЗ - ДедЭколог.md  ТЗ - ЭкоПульс.md
scripts/: backup-db.sh  export-handoff.sh  restore-db.sh
(+222 files in other folders)
